--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,62 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-/* my css */
-
-.pagination-active {
-  background-color: blue;
-  cursor: pointer;
-  color: white;
-  padding: 10px 15px;
-  border: 1px solid #ddd; /* Gray */
-}
-
-.pagination-item {
-  cursor: pointer;
-  border: 1px solid #ddd; /* Gray */
-  padding: 10px 15px;
-}
-
-.pagination-item:hover {
-  background-color: #ddd
-}
-
 .FlexProfileDrawer {
   display: flex;
   flex-direction: row;
@@ -69,7 +10,7 @@
   text-align: center;
 }
 
-FlexProfileDrawerRow {
+.FlexProfileDrawerRow {
   display: flex;
   flex-direction: row;
   margin: 10px;
@@ -106,6 +47,32 @@ FlexProfileDrawerRow {
 }
 
 
+.CardStyles {
+  animation-name: fadeIn;
+  animation-timing-function: ease-out;
+  animation-duration: 2s;
+  height: auto;
+  width: 500px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+}
+
+
+.notification-num-showpost {
+  position:relative;
+  padding:5px 9px;
+  background-color: red;
+  color: #941e1e;
+  bottom: 23px;
+  right: 5px;
+  z-index: -1;
+  border-radius: 50%;
+}
+
+.notification-num-allposts {
+  padding-left: 5px;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -126,13 +93,98 @@ FlexProfileDrawerRow {
   }
 }
 
-.notification-num-showpost {
-  position:relative;
-  padding:5px 9px;
-  background-color: red;
-  color: #941e1e;
-  bottom: 23px;
-  right: 5px;
-  z-index: -1;
-  border-radius: 50%;
-}
+.pagination {
+    display: flex;
+    padding-left: 0;
+    margin: 22px 0;
+    border-radius: 4px;
+  }
+  .pagination > li {
+    display: inline;
+  }
+  .pagination > li > a,
+  .pagination > li > span {
+    position: relative;
+    padding: 6px 12px;
+    line-height: 1.42857143;
+    text-decoration: none;
+    color: #2c689c;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    margin-left: -1px;
+  }
+  .pagination > li:first-child > a,
+  .pagination > li:first-child > span {
+    margin-left: 0;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+  }
+  .pagination > li:last-child > a,
+  .pagination > li:last-child > span {
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+  }
+  .pagination > li > a:hover,
+  .pagination > li > span:hover,
+  .pagination > li > a:focus,
+  .pagination > li > span:focus {
+    z-index: 2;
+    color: #1b4060;
+    background-color: #eeeeee;
+    border-color: #ddd;
+  }
+  .pagination > .active > a,
+  .pagination > .active > span,
+  .pagination > .active > a:hover,
+  .pagination > .active > span:hover,
+  .pagination > .active > a:focus,
+  .pagination > .active > span:focus {
+    z-index: 3;
+    color: #fff;
+    background-color: #2c689c;
+    border-color: #2c689c;
+    cursor: default;
+  }
+  .pagination > .disabled > span,
+  .pagination > .disabled > span:hover,
+  .pagination > .disabled > span:focus,
+  .pagination > .disabled > a,
+  .pagination > .disabled > a:hover,
+  .pagination > .disabled > a:focus {
+    color: #777777;
+    background-color: #fff;
+    border-color: #ddd;
+    cursor: not-allowed;
+  }
+  .pagination-lg > li > a,
+  .pagination-lg > li > span {
+    padding: 10px 16px;
+    font-size: 20px;
+    line-height: 1.3333333;
+  }
+  .pagination-lg > li:first-child > a,
+  .pagination-lg > li:first-child > span {
+    border-bottom-left-radius: 6px;
+    border-top-left-radius: 6px;
+  }
+  .pagination-lg > li:last-child > a,
+  .pagination-lg > li:last-child > span {
+    border-bottom-right-radius: 6px;
+    border-top-right-radius: 6px;
+  }
+  .pagination-sm > li > a,
+  .pagination-sm > li > span {
+    padding: 5px 10px;
+    font-size: 14px;
+    line-height: 1.5;
+  }
+  .pagination-sm > li:first-child > a,
+  .pagination-sm > li:first-child > span {
+    border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px;
+  }
+  .pagination-sm > li:last-child > a,
+  .pagination-sm > li:last-child > span {
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px;
+  }
