--- a/client/src/styles/pagination.css
+++ b/client/src/styles/pagination.css
@@ -1,5 +1,5 @@
 .pagination-active {
-    background-color: blue;
+    background-color: #5936AC;
     cursor: pointer;
     color: white;
     padding: 10px 15px;
